--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <header>
-    <h2>KFC MENU</h2>
+    <nav>
+        <a href="/menu">Menu</a>
+        <a href="/careers">Careers</a>
+        <a target='_blank' href="/merch">Merch</a>
+    </nav>
+    <button class="orderBtn">Start Order</button>
+    
 </header>
 <body>
+    <h2>KFC MENU</h2>
     <main>
        <section class="menuCategory">
             <button class="specialOffers">
